# ai-self-fill

./: .gitignore  README.md  api_automation.py  config.json  config_template.json  conversation.xlsx  pyproject.toml  run_with_config.py  test_import.py  uv使用说明.md  使用uv安装.bat  使用uv运行.bat  使用说明.md  启动脚本.bat  快速开始.txt  接口说明.txt  文件清单.txt
