[project]
name = "api-automation"
version = "1.0.0"
description = "自助提报自动化脚本"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
run = "api_automation:main"
run-config = "run_with_config:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[[index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
